--- a/Client.HanYangYun/packages.config
+++ b/Client.HanYangYun/packages.config
@@ -1,36 +1,37 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.AspNetCore.Connections.Abstractions" version="3.1.5" targetFramework="net462" />
-  <package id="Microsoft.AspNetCore.Http.Features" version="3.1.5" targetFramework="net462" />
+  <package id="Microsoft.AspNetCore.Connections.Abstractions" version="3.1.8" targetFramework="net462" />
+  <package id="Microsoft.AspNetCore.Http.Features" version="3.1.8" targetFramework="net462" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.1" targetFramework="net462" />
   <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net462" />
-  <package id="Microsoft.Extensions.Configuration" version="3.1.5" targetFramework="net462" />
-  <package id="Microsoft.Extensions.Configuration.Abstractions" version="3.1.5" targetFramework="net462" />
-  <package id="Microsoft.Extensions.Configuration.Binder" version="3.1.5" targetFramework="net462" />
-  <package id="Microsoft.Extensions.DependencyInjection" version="3.1.5" targetFramework="net462" />
-  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="3.1.5" targetFramework="net462" />
-  <package id="Microsoft.Extensions.DependencyModel" version="3.1.5" targetFramework="net462" />
-  <package id="Microsoft.Extensions.FileProviders.Abstractions" version="3.1.5" targetFramework="net462" />
-  <package id="Microsoft.Extensions.Hosting.Abstractions" version="3.1.5" targetFramework="net462" />
-  <package id="Microsoft.Extensions.Logging" version="3.1.5" targetFramework="net462" />
-  <package id="Microsoft.Extensions.Logging.Abstractions" version="3.1.5" targetFramework="net462" />
-  <package id="Microsoft.Extensions.Logging.Configuration" version="3.1.5" targetFramework="net462" />
-  <package id="Microsoft.Extensions.Logging.Console" version="3.1.5" targetFramework="net462" />
-  <package id="Microsoft.Extensions.ObjectPool" version="3.1.5" targetFramework="net462" />
-  <package id="Microsoft.Extensions.Options" version="3.1.5" targetFramework="net462" />
-  <package id="Microsoft.Extensions.Options.ConfigurationExtensions" version="3.1.5" targetFramework="net462" />
-  <package id="Microsoft.Extensions.Primitives" version="3.1.5" targetFramework="net462" />
-  <package id="Microsoft.Orleans.Client" version="3.2.0" targetFramework="net462" />
-  <package id="Microsoft.Orleans.Core" version="3.2.0" targetFramework="net462" />
-  <package id="Microsoft.Orleans.Core.Abstractions" version="3.2.0" targetFramework="net462" />
-  <package id="Microsoft.Orleans.OrleansProviders" version="3.2.0" targetFramework="net462" />
-  <package id="Microsoft.Orleans.Runtime.Abstractions" version="3.2.0" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Configuration" version="3.1.8" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="3.1.8" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Configuration.Binder" version="3.1.8" targetFramework="net462" />
+  <package id="Microsoft.Extensions.DependencyInjection" version="3.1.8" targetFramework="net462" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="3.1.8" targetFramework="net462" />
+  <package id="Microsoft.Extensions.DependencyModel" version="3.1.6" targetFramework="net462" />
+  <package id="Microsoft.Extensions.FileProviders.Abstractions" version="3.1.8" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Hosting.Abstractions" version="3.1.8" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Logging" version="3.1.8" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="3.1.8" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Logging.Configuration" version="3.1.8" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Logging.Console" version="3.1.8" targetFramework="net462" />
+  <package id="Microsoft.Extensions.ObjectPool" version="3.1.8" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Options" version="3.1.8" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Options.ConfigurationExtensions" version="3.1.8" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Primitives" version="3.1.8" targetFramework="net462" />
+  <package id="Microsoft.Orleans.Client" version="3.3.0" targetFramework="net462" />
+  <package id="Microsoft.Orleans.Core" version="3.3.0" targetFramework="net462" />
+  <package id="Microsoft.Orleans.Core.Abstractions" version="3.3.0" targetFramework="net462" />
+  <package id="Microsoft.Orleans.OrleansProviders" version="3.3.0" targetFramework="net462" />
+  <package id="Microsoft.Orleans.Runtime.Abstractions" version="3.3.0" targetFramework="net462" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net462" />
-  <package id="ServiceStack" version="3.9.71" targetFramework="net462" />
-  <package id="ServiceStack.Common" version="3.9.71" targetFramework="net462" />
-  <package id="ServiceStack.OrmLite.SqlServer" version="3.9.71" targetFramework="net462" />
-  <package id="ServiceStack.Redis" version="3.9.71" targetFramework="net462" />
-  <package id="ServiceStack.Text" version="3.9.71" targetFramework="net462" />
+  <package id="Orleans.MultiClient.Standard" version="1.0.0" targetFramework="net462" />
+  <package id="ServiceStack" version="3.9.71" allowedVersions="[3.9.71]" targetFramework="net462" />
+  <package id="ServiceStack.Common" version="3.9.71" allowedVersions="[3.9.71]" targetFramework="net462" />
+  <package id="ServiceStack.OrmLite.SqlServer" version="3.9.71" allowedVersions="[3.9.71]" targetFramework="net462" />
+  <package id="ServiceStack.Redis" version="3.9.71" allowedVersions="[3.9.71]" targetFramework="net462" />
+  <package id="ServiceStack.Text" version="3.9.71" allowedVersions="[3.9.71]" targetFramework="net462" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net462" />
   <package id="System.Collections.Immutable" version="1.7.1" targetFramework="net462" />
   <package id="System.ComponentModel.Annotations" version="4.7.0" targetFramework="net462" />
