--- a/Silo.WMS/packages.config
+++ b/Silo.WMS/packages.config
@@ -2,38 +2,38 @@
 <packages>
   <package id="Crc32C.NET" version="1.0.5.0" targetFramework="net462" />
   <package id="DnsClient" version="1.3.2" targetFramework="net462" />
-  <package id="Microsoft.AspNetCore.Connections.Abstractions" version="3.1.5" targetFramework="net462" />
-  <package id="Microsoft.AspNetCore.Http.Features" version="3.1.5" targetFramework="net462" />
+  <package id="Microsoft.AspNetCore.Connections.Abstractions" version="3.1.8" targetFramework="net462" />
+  <package id="Microsoft.AspNetCore.Http.Features" version="3.1.8" targetFramework="net462" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.1" targetFramework="net462" />
-  <package id="Microsoft.Extensions.Configuration" version="3.1.5" targetFramework="net462" />
-  <package id="Microsoft.Extensions.Configuration.Abstractions" version="3.1.5" targetFramework="net462" />
-  <package id="Microsoft.Extensions.Configuration.Binder" version="3.1.5" targetFramework="net462" />
-  <package id="Microsoft.Extensions.DependencyInjection" version="3.1.5" targetFramework="net462" />
-  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="3.1.5" targetFramework="net462" />
-  <package id="Microsoft.Extensions.DependencyModel" version="3.1.5" targetFramework="net462" />
-  <package id="Microsoft.Extensions.FileProviders.Abstractions" version="3.1.5" targetFramework="net462" />
-  <package id="Microsoft.Extensions.Hosting.Abstractions" version="3.1.5" targetFramework="net462" />
-  <package id="Microsoft.Extensions.Logging" version="3.1.5" targetFramework="net462" />
-  <package id="Microsoft.Extensions.Logging.Abstractions" version="3.1.5" targetFramework="net462" />
-  <package id="Microsoft.Extensions.Logging.Configuration" version="3.1.5" targetFramework="net462" />
-  <package id="Microsoft.Extensions.Logging.Console" version="3.1.5" targetFramework="net462" />
-  <package id="Microsoft.Extensions.ObjectPool" version="3.1.5" targetFramework="net462" />
-  <package id="Microsoft.Extensions.Options" version="3.1.5" targetFramework="net462" />
-  <package id="Microsoft.Extensions.Options.ConfigurationExtensions" version="3.1.5" targetFramework="net462" />
-  <package id="Microsoft.Extensions.Primitives" version="3.1.5" targetFramework="net462" />
-  <package id="Microsoft.Orleans.Core" version="3.2.0" targetFramework="net462" />
-  <package id="Microsoft.Orleans.Core.Abstractions" version="3.2.0" targetFramework="net462" />
-  <package id="Microsoft.Orleans.OrleansProviders" version="3.2.0" targetFramework="net462" />
-  <package id="Microsoft.Orleans.OrleansRuntime" version="3.2.0" targetFramework="net462" />
-  <package id="Microsoft.Orleans.Runtime.Abstractions" version="3.2.0" targetFramework="net462" />
-  <package id="Microsoft.Orleans.Server" version="3.2.0" targetFramework="net462" />
-  <package id="MongoDB.Bson" version="2.10.4" targetFramework="net462" />
-  <package id="MongoDB.Driver" version="2.10.4" targetFramework="net462" />
-  <package id="MongoDB.Driver.Core" version="2.10.4" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Configuration" version="3.1.8" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="3.1.8" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Configuration.Binder" version="3.1.8" targetFramework="net462" />
+  <package id="Microsoft.Extensions.DependencyInjection" version="3.1.8" targetFramework="net462" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="3.1.8" targetFramework="net462" />
+  <package id="Microsoft.Extensions.DependencyModel" version="3.1.6" targetFramework="net462" />
+  <package id="Microsoft.Extensions.FileProviders.Abstractions" version="3.1.8" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Hosting.Abstractions" version="3.1.8" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Logging" version="3.1.8" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="3.1.8" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Logging.Configuration" version="3.1.8" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Logging.Console" version="3.1.8" targetFramework="net462" />
+  <package id="Microsoft.Extensions.ObjectPool" version="3.1.8" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Options" version="3.1.8" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Options.ConfigurationExtensions" version="3.1.8" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Primitives" version="3.1.8" targetFramework="net462" />
+  <package id="Microsoft.Orleans.Core" version="3.3.0" targetFramework="net462" />
+  <package id="Microsoft.Orleans.Core.Abstractions" version="3.3.0" targetFramework="net462" />
+  <package id="Microsoft.Orleans.OrleansProviders" version="3.3.0" targetFramework="net462" />
+  <package id="Microsoft.Orleans.OrleansRuntime" version="3.3.0" targetFramework="net462" />
+  <package id="Microsoft.Orleans.Runtime.Abstractions" version="3.3.0" targetFramework="net462" />
+  <package id="Microsoft.Orleans.Server" version="3.3.0" targetFramework="net462" />
+  <package id="MongoDB.Bson" version="2.11.2" targetFramework="net462" />
+  <package id="MongoDB.Driver" version="2.11.2" targetFramework="net462" />
+  <package id="MongoDB.Driver.Core" version="2.11.2" targetFramework="net462" />
   <package id="MongoDB.Libmongocrypt" version="1.0.0" targetFramework="net462" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net462" />
   <package id="Orleans.Providers.MongoDB" version="3.1.7" targetFramework="net462" />
-  <package id="SharpCompress" version="0.25.1" targetFramework="net462" />
+  <package id="SharpCompress" version="0.26.0" targetFramework="net462" />
   <package id="Snappy.NET" version="1.1.1.8" targetFramework="net462" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net462" />
   <package id="System.Collections.Immutable" version="1.7.1" targetFramework="net462" />
@@ -41,6 +41,7 @@
   <package id="System.Diagnostics.DiagnosticSource" version="4.7.1" targetFramework="net462" />
   <package id="System.IO.Pipelines" version="4.7.2" targetFramework="net462" />
   <package id="System.Memory" version="4.5.4" targetFramework="net462" />
+  <package id="System.Net.Http" version="4.3.4" targetFramework="net462" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net462" />
   <package id="System.Reflection.Emit" version="4.7.0" targetFramework="net462" />
   <package id="System.Reflection.Emit.Lightweight" version="4.7.0" targetFramework="net462" />
@@ -48,6 +49,10 @@
   <package id="System.Runtime" version="4.3.1" targetFramework="net462" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.1" targetFramework="net462" />
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net462" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.1" targetFramework="net462" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net462" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net462" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.2" targetFramework="net462" />
   <package id="System.Threading.Channels" version="4.7.1" targetFramework="net462" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net462" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net462" />
