--- a/Unit.HY/Unit.HYY.csproj
+++ b/Unit.HY/Unit.HYY.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{9BC3E7AD-B4B8-409D-AAD5-F649C904E489}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Unit.HY</RootNamespace>
-    <AssemblyName>Unit.HY</AssemblyName>
+    <RootNamespace>Unit.HYY</RootNamespace>
+    <AssemblyName>Unit.HYY</AssemblyName>
     <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
