--- a/GrainImplement.DRL/GrainImplement.DRL.csproj
+++ b/GrainImplement.DRL/GrainImplement.DRL.csproj
@@ -60,9 +60,6 @@
     <Reference Include="Engine.GIS, Version=0.0.0.1, Culture=neutral, processorArchitecture=AMD64">
       <HintPath>..\packages\Engine.GIS.0.0.0.1\lib\net462\Engine.GIS.dll</HintPath>
     </Reference>
-    <Reference Include="Engine.ML, Version=0.0.0.1, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>..\packages\Engine.ML.0.0.0.1\lib\net462\Engine.ML.dll</HintPath>
-    </Reference>
     <Reference Include="gdalconst_csharp, Version=1.0.7372.36899, Culture=neutral, PublicKeyToken=db5a52b08dc5b321, processorArchitecture=MSIL">
       <HintPath>..\packages\GDAL.2.4.4\lib\net40\gdalconst_csharp.dll</HintPath>
     </Reference>
@@ -159,16 +156,36 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Extend\ArrayExtend.cs" />
+    <Compile Include="Extend\DictionaryExtend.cs" />
+    <Compile Include="Extend\DoubleExtend.cs" />
+    <Compile Include="Extend\FloatExtend.cs" />
+    <Compile Include="Extend\ListExtend.cs" />
     <Compile Include="GdalConfiguration.cs" />
+    <Compile Include="IMachineLarning.cs" />
+    <Compile Include="ISupervisedLearning.cs" />
+    <Compile Include="Method\IConvolutionNetwork.cs" />
+    <Compile Include="Method\INeuralNetwork.cs" />
+    <Compile Include="IReinforcementLearning.cs" />
+    <Compile Include="IUnsupervisedLearning.cs" />
+    <Compile Include="Method\ReinforcementLearning\DQN.cs" />
+    <Compile Include="Method\ReinforcementLearning\IEnv.cs" />
+    <Compile Include="Method\ReinforcementLearning\ISupportNet.cs" />
+    <Compile Include="Method\SupervisedLearning\FCN7.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utils\NP.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Accord.dll.config" />
     <None Include="app.config" />
     <None Include="packages.config" />
+    <Compile Include="Utils\partial\NP.CNTKHelper.cs" />
+    <Compile Include="Utils\partial\NP.Keras.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="GdalConfiguration.vb" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Method\ReinforcementLearning\Env\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Microsoft.Orleans.CodeGenerator.MSBuild.3.3.0\build\Microsoft.Orleans.CodeGenerator.MSBuild.targets" Condition="Exists('..\packages\Microsoft.Orleans.CodeGenerator.MSBuild.3.3.0\build\Microsoft.Orleans.CodeGenerator.MSBuild.targets')" />
