--- a/GrainImplement.NLP/packages.config
+++ b/GrainImplement.NLP/packages.config
@@ -1,11 +1,42 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Accord" version="3.8.0" targetFramework="net462" />
+  <package id="Accord.Genetic" version="3.8.0" targetFramework="net462" />
+  <package id="Accord.MachineLearning" version="3.8.0" targetFramework="net462" />
+  <package id="Accord.Math" version="3.8.0" targetFramework="net462" />
+  <package id="Accord.Neuro" version="3.8.0" targetFramework="net462" />
+  <package id="Accord.Statistics" version="3.8.0" targetFramework="net462" />
+  <package id="CNTK.Deps.Cuda" version="2.7.0" targetFramework="net462" />
+  <package id="CNTK.Deps.cuDNN" version="2.7.0" targetFramework="net462" />
+  <package id="CNTK.Deps.MKL" version="2.7.0" targetFramework="net462" />
+  <package id="CNTK.Deps.OpenCV.Zip" version="2.7.0" targetFramework="net462" />
+  <package id="CNTK.GPU" version="2.7.0" targetFramework="net462" />
+  <package id="Engine.GIS" version="0.0.0.1" targetFramework="net462" />
+  <package id="Engine.ML" version="0.0.0.1" targetFramework="net462" />
+  <package id="GDAL" version="2.4.4" targetFramework="net462" />
+  <package id="GDAL.Native" version="2.4.4" targetFramework="net462" />
+  <package id="GeoAPI" version="1.7.5" targetFramework="net462" />
+  <package id="GeoAPI.CoordinateSystems" version="1.7.5" targetFramework="net462" />
+  <package id="GeoAPI.Core" version="1.7.5" targetFramework="net462" />
+  <package id="IKVM" version="8.1.5717.0" targetFramework="net462" />
   <package id="Microsoft.Extensions.Logging.Abstractions" version="3.1.9" targetFramework="net462" />
   <package id="Microsoft.Orleans.CodeGenerator.MSBuild" version="3.3.0" targetFramework="net462" developmentDependency="true" />
   <package id="Microsoft.Orleans.Core.Abstractions" version="3.3.0" targetFramework="net462" />
+  <package id="NetTopologySuite" version="2.1.0" targetFramework="net462" />
+  <package id="NetTopologySuite.CoordinateSystems" version="1.15.3" targetFramework="net462" />
+  <package id="NetTopologySuite.Core" version="1.15.3" targetFramework="net462" />
+  <package id="NetTopologySuite.Features" version="2.1.0" targetFramework="net462" />
+  <package id="NetTopologySuite.IO" version="1.14.0.1" targetFramework="net462" />
+  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net462" />
+  <package id="ProjNET4GeoAPI" version="1.4.1" targetFramework="net462" />
+  <package id="ScottPlot" version="4.0.42" targetFramework="net462" />
+  <package id="ScottPlot.WinForms" version="4.0.42" targetFramework="net462" />
+  <package id="Stanford.NLP.CoreNLP" version="3.9.2.0" targetFramework="net462" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net462" />
+  <package id="System.Drawing.Common" version="4.7.0" targetFramework="net462" />
   <package id="System.Memory" version="4.5.4" targetFramework="net462" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net462" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.1" targetFramework="net462" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net462" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net462" />
 </packages>
