--- a/GrainImplement.WMS/packages.config
+++ b/GrainImplement.WMS/packages.config
@@ -3,6 +3,7 @@
   <package id="Accord" version="3.8.0" targetFramework="net462" />
   <package id="Accord.Math" version="3.8.0" targetFramework="net462" />
   <package id="Accord.Statistics" version="3.8.0" targetFramework="net462" />
+  <package id="BruTile" version="3.0.0" targetFramework="net462" />
   <package id="Crc32C.NET" version="1.0.5.0" targetFramework="net462" />
   <package id="DnsClient" version="1.3.2" targetFramework="net462" />
   <package id="Engine.GIS" version="0.0.0.1" targetFramework="net462" />
